# my-cli

./: pyproject.toml
src/my_cli/: core.py
tests/: test_core.py
