[tool.poetry]
name = "my-cli"
version = "0.1.0"
description = ""
authors = ["ntargon <argon19951128@gmail.com>"]
readme = "README.md"
packages = [{include = "my_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-cli = "my_cli.core:main"